@@ -1,3 +1,5 @@
+2021-08-31 Version   2.4.3: Fixed the connection to the TLS renegotiation on FreeBSD
+                            Detects old BSD date without -f
 2021-08-27 Version   2.4.2: Fixed the handling of IP addresses
 2021-08-19 Version   2.4.1: Fixed the handling of --file and --cn
 2021-08-16 Version   2.4.0: Support DANE TLSA 312
