@@ -1,1 +1,2 @@
-Fixed the handling of IP addresses
+Fixed the connection to the TLS renegotiation on FreeBSD
+Detects old BSD date without -f
