@@ -1,3 +1,7 @@
+2021-09-01  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert (main): detects old BSD date without -f
+
 2021-08-31  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert (main): added -crlf to the connection for the renegotiation test
